# dateme

./: .buildinfo  .copier-answers.yaml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/dateme/: index.doctree
.doctrees/autoapi/test_all/: index.doctree
.doctrees/docs/src/: api-javascript.doctree  api-python.doctree  explanation.doctree  how-to.doctree  schedule-model.doctree  tutorial.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
_modules/: index.html
_modules/dateme/: model.html
_sources/: index.md.txt
_sources/autoapi/dateme/: index.rst.txt
_sources/docs/src/: api-javascript.md.txt  api-python.md.txt  explanation.md.txt  how-to.md.txt  schedule-model.md.txt  tutorial.md.txt
autoapi/dateme/: index.html
autoapi/test_all/: index.html
dateme/: __init__.py  model.py
dateme/tests/: test_all.py  test_model.py
docs/src/: api-javascript.html  api-javascript.md  api-python.html  api-python.md  explanation.html  how-to.html  how-to.md  schedule-model.html  schedule-model.md  tutorial.html
js/: Cargo.toml  build.mjs  package.json  pnpm-lock.yaml
js/src/html/: index.html
js/src/rust/: lib.rs
js/src/ts/: index.ts  model.ts
js/tests/: index.spec.js
rust/: Cargo.toml
rust/python/: lib.rs
rust/python/example/: mod.rs
rust/src/: calendar.rs  engine.rs  lib.rs  schedule.rs  tests.rs
