[package]
name = "dateme_py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "dateme"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dateme_core = { path = "./rust", package = "dateme", version = "*" }
pyo3 = { version = "0.29.0", features = ["abi3", "extension-module", "multiple-pymethods", "chrono"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
panic = 'abort'
lto = true

[profile.test.junit]
path = "junit.xml"

[workspace]
members = [
    "js",
    "rust",
]
