[package]
name = "dateme_js"
version = "0.1.0"
edition = "2021"
publish = false
keywords = ["experimental"]
include = ["src/**/*", "Cargo.toml", "package.json"]

[lib]
name = "dateme"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dateme = { path = "../rust", version = "*", features = ["calendars"] }
wasm-bindgen = "=0.2.126"
chrono = { version = "0.4", default-features = false }
serde_json = "1.0"
