[package]
name = "dateme"
version = "0.1.0"
authors = ["the dateme authors <dev@1kbgz.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/1kbgz/dateme"
description = "Dates and intervals"

[lib]
name = "dateme"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }